added selection to index-form

--- a/partials/index-form.html
+++ b/partials/index-form.html
@@ -3,7 +3,14 @@
     <input type="text" value="Phone number">
     <input type="text" value="Check in date">
     <input type="text" value="Check out date">
-    
+    <select name="Number of guests">
+        <option>1</option>
+        <option>2</option>
+        <option>3</option>
+        <option>4</option>
+        <option>5</option>
+        <option>5+</option>
+    </select>
     <input type="submit" value="Make a reservation">
 
 
