added header content and call form

--- a/partials/call-form.partial.html
+++ b/partials/call-form.partial.html
@@ -1,1 +1,9 @@
-<section></section>
+<section>
+    <p>Yosemite Vacation Cabin Rental</p>
+    <p>Plan your next vacation and enjoy the nature around you!</p>
+    <form action="">
+        <input type="text" placeholder="Name*" required />
+        <input type="tel" placeholder="Phone number*" required />
+        <input type="submit" value="Order a call" />
+    </form>
+</section>
