--- a/partials/header.partial.html
+++ b/partials/header.partial.html
@@ -1,1 +1,20 @@
-<header></header>
+<header>
+    <p>Yosemite Mariposa County, Ca, USA</p>
+      <img src="img/yosemite-vacation-logo.png" alt="yosemite-vacation-logo" />
+      <ul>
+        <li>
+          <a href="#">About</a>
+        </li>
+        <li>
+          <a href="#">Gallery</a>
+        </li>
+        <li>
+          <a href="#">Accommodation</a>
+        </li>
+        <li>
+          <a href="#">How to get there</a>
+        </li>
+      </ul>
+      <a href="tel:+1 (234) 567 89 00"> +1 (234) 567 89 00</a>
+      <a href="tel:+1 (234) 567 89 01">+1 (234) 567 89 01</a>
+</header>
