fixed some bugs

--- a/partials/call-form.partial.html
+++ b/partials/call-form.partial.html
@@ -1,7 +1,7 @@
 <section>
-    <p>Yosemite Vacation Cabin Rental</p>
+    <h2>Yosemite Vacation Cabin Rental</h2>
     <p>Plan your next vacation and enjoy the nature around you!</p>
-    <form action="">
+    <form action="#" method="post">
         <input type="text" placeholder="Name*" required />
         <input type="tel" placeholder="Phone number*" required />
         <input type="submit" value="Order a call" />
