--- a/partials/header.partial.html
+++ b/partials/header.partial.html
@@ -3,18 +3,18 @@
       <img src="img/yosemite-vacation-logo.png" alt="yosemite-vacation-logo" />
       <ul>
         <li>
-          <a href="#">About</a>
+          <a href="about.html">About</a>
         </li>
         <li>
-          <a href="#">Gallery</a>
+          <a href="gallery.html">Gallery</a>
         </li>
         <li>
-          <a href="#">Accommodation</a>
+          <a href="offer.html">Accommodation</a>
         </li>
         <li>
-          <a href="#">How to get there</a>
+          <a href="contact.html">How to get there</a>
         </li>
       </ul>
-      <a href="tel:+1 (234) 567 89 00"> +1 (234) 567 89 00</a>
-      <a href="tel:+1 (234) 567 89 01">+1 (234) 567 89 01</a>
+      <a href="tel:+1(234)5678900">+1 (234) 567 89 00</a>
+      <a href="tel:+1(234)5678901">+1 (234) 567 89 01</a>
 </header>
