--- a/partials/header.partial.html
+++ b/partials/header.partial.html
@@ -1,6 +1,6 @@
 <header>
     <p>Yosemite Mariposa County, Ca, USA</p>
-      <img src="img/yosemite-vacation-logo.png" alt="yosemite-vacation-logo" />
+      <a href="index.html"><img src="img/yosemite-vacation-logo.png" alt="yosemite-vacation-logo" /></a>
       <ul>
         <li>
           <a href="about.html">About</a>
