--- a/partials/gallery-main-our-guests.html
+++ b/partials/gallery-main-our-guests.html
@@ -1,3 +1,5 @@
 <section>
-    <p>Build galery</p>
+    <p>Start caruslel</p>
+    <img src="img/galery_carusel_back_graund.jpeg" alt="carusel_back_graund">
+    <h2>Our guests</h2>
 </section>
