fixed alt and buttons

--- a/partials/cabin-rental.partial.html
+++ b/partials/cabin-rental.partial.html
@@ -2,43 +2,35 @@
     <h2>Cabin Rentals</h2>
     <ul>
         <li>
-            <img src="img/river-chalet-house.webp" alt="river-chalet-house" height="250">
+            <img src="img/river-chalet-house.webp" alt="river chalet house" height="250">
             <p>$65/night</p>
             <h3>River Chalet</h3>
             <p>1 Bedroom, 1 Bathroom, Sleeps 2</p>
-            <button>
-                <a href="offer.html">LEARN MORE</a>
-            </button>
+            <a href="offer.html">LEARN MORE</a>
         </li>
         <li>
-            <img src="img/lookout-lodge-house.webp" alt="lookout-lodge-house" height="250">
+            <img src="img/lookout-lodge-house.webp" alt="lookout lodge house" height="250">
             <p>$75/night</p>
             <h3>Lookout Lodge</h3>
             <p>2 Bedroom, 1 Bathroom, Sleeps 4</p>
-            <button>
-                <a href="offer.html">LEARN MORE</a>
-            </button>
+            <a href="offer.html">LEARN MORE</a>
         </li>
         <li>
-            <img src="img/smoky-view-chalet-house.webp" alt="smoky-view-chalet-house" height="250">
+            <img src="img/smoky-view-chalet-house.webp" alt="smoky view chalet house" height="250">
             <p>$85/night</p>
             <h3>Smoky View Chalet</h3>
             <p>2 Bedroom, 2 Bathroom, Sleeps 6</p>
-            <button>
-                <a href="offer.html">LEARN MORE</a>
-            </button>
+            <a href="offer.html">LEARN MORE</a>
         </li>
         <li>
-            <img src="img/mountain-haven-house.webp" alt="mountain-haven-house" height="250">
+            <img src="img/mountain-haven-house.webp" alt="mountain haven house" height="250">
             <p>$95/night</p>
             <h3>Mountain Haven</h3>
             <p>3 Bedroom, 2 Bathroom, Sleeps 8</p>
-            <button>
-                <a href="offer.html">LEARN MORE</a>
-            </button>
-        </li>    
+            <a href="offer.html">LEARN MORE</a>
+        </li>
     </ul>
-    <button>
-        <a href="offer.html">SEE ALL CABINS</a>
-    </button>
+
+    <a href="offer.html">SEE ALL CABINS</a>
+
 </section>
