--- a/partials/footer.html
+++ b/partials/footer.html
@@ -1,10 +1,11 @@
 <footer class="footer">
     <div>
         <a href="index.html">
-            <img src="img/yosemite-vacation-logo.png" alt="yosemite-vacation-logo">
+            <img src="img/yosemite-vacation-logo.png" alt="yosemite vacation logo">
         </a>
         
     </div>
+    
     <div>
         <ul>
             <li>
@@ -24,6 +25,7 @@
             </li>
         </ul>
     </div>
+
     <div>
         <p>Follow Us</p>
         <ul>
@@ -49,6 +51,7 @@
             </li>
         </ul>
     </div>
+
     <div>
         <p>Created by</p>
         <p>All rights Reserved</p>
