--- a/partials/contact-main-contact-us.html
+++ b/partials/contact-main-contact-us.html
@@ -1,6 +1,6 @@
 <section>
     <!--select images changes -->
-    <img src="img/contacts_form_backgraund.jpeg" style="width: 768px;height: 300px;" alt="contacts_back_graund">
+    <img src="img/contacts_form_background.jpeg" style="width: 768px;height: 300px;" alt="contacts background">
     <div>
         <div>
             <h2>Contact Us</h2>
