--- a/partials/gallery-main-our-guests.html
+++ b/partials/gallery-main-our-guests.html
@@ -1,5 +1,5 @@
 <section>
-    <p>Start caruslel</p>
+    <p>Start carousel</p>
     <img src="img/gallery_carousel_background.jpeg" alt="carousel background">
     <h2>Our guests</h2>
 </section>
