--- a/partials/offer-main.html
+++ b/partials/offer-main.html
@@ -1,4 +1,23 @@
 <main>
     <h1>Cabin Rentals</h1>
-    
+    <section class="Cabin-ofers">
+        <div class="river-chalet-ofer">
+            <img src="/img/river-chalet-ofer-img.jpg" alt="river chalet photo">
+            <article class="river-chalet-ofer-content">
+                <h2><span class="house-ofer-price">$65</span> /a night</h2>
+                <h3>River Chalet</h3>
+                <ul class="house-ofer-rooms">
+                    <li>1 Bedroom</li>
+                    <li>1 Bathroom</li>
+                    <li>2 Sleeps</li>
+                </ul>
+                <div class="house-ofer-comfort">
+                    <p>Jetted Tub</p>
+                    <p>Flat Panel TV</p>
+                    <p>Fireplace</p>
+                    <p>Wi-Fi</p>
+                </div>
+            </article>
+        </div>
+    </section>
 </main>
