--- a/css/global.css
+++ b/css/global.css
@@ -1,1 +1,7 @@
  /* global*/
+h2{
+    font-style: normal;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 24px;
+    color: #fb6d3a;} 
