--- a/css/global.css
+++ b/css/global.css
@@ -5,3 +5,16 @@ h2{
     font-size: 14px;
     line-height: 24px;
     color: #fb6d3a;} 
+a{
+    font-style: normal;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 24px;
+    color: #fb6d3a;} 
+p{
+    font-style: normal;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 24px;
+    color: #fb6d3a;} 
+
