--- a/css/global.css
+++ b/css/global.css
@@ -5,7 +5,7 @@ h2{
     font-size: 14px;
     line-height: 24px;
     color: #fb6d3a;} 
-a{
+li{
     font-style: normal;
     font-weight: 700;
     font-size: 14px;
