fixed index-form partial

--- a/partials/index-form.html
+++ b/partials/index-form.html
@@ -2,10 +2,10 @@
     <h2 class="reservation-title">Make a reservation</h2>
     <p class="reservation-description">Please complete the form below</p>
     <form action="" method="" class="reservation-form">
-        <input type="text" value="Name" class="reservation-input">
-        <input type="text" value="Phone number" class="reservation-input">
-        <input type="text" value="Check in date" class="reservation-input">
-        <input type="text" value="Check out date" class="reservation-input">
+        <input type="text" placeholder="Name" class="reservation-input">
+        <input type="text" placeholder="Phone number" class="reservation-input">
+        <input type="text" placeholder="Check in date" class="reservation-input">
+        <input type="text" placeholder="Check out date" class="reservation-input">
         <select name="Number of guests" aria-placeholder="Number of guests" class="reservation-select">
             <option>1</option>
             <option>2</option>
@@ -14,6 +14,6 @@
             <option>5</option>
             <option>5+</option>
         </select>
-        <input type="submit" value="Make a reservation" class="reservation-submit">
+        <input type="submit" placeholder="Make a reservation" class="reservation-submit">
     </form>
 </div>
