--- a/partials/offer-main.html
+++ b/partials/offer-main.html
@@ -1,11 +1,11 @@
 <main>
-    <h1>Cabin Rentals</h1>
+    <h2>Cabin Rentals</h2>
     <section class="Cabin-ofers">
         <div class="river-chalet-ofer">
             <img src="img/river-chalet-ofer-img.jpg" alt="river chalet photo">
             <article class="river-chalet-ofer-content">
-                <h2><span class="house-ofer-price">$65</span> /a night</h2>
-                <h3>River Chalet</h3>
+                <h3><span class="house-ofer-price">$65</span> /a night</h3>
+                <p>River Chalet</p>
                 <ul class="house-ofer-rooms">
                     <li>1 Bedroom</li>
                     <li>1 Bathroom</li>
