made new house-ofer

--- a/partials/offer-main.html
+++ b/partials/offer-main.html
@@ -2,7 +2,7 @@
     <h2>Cabin Rentals</h2>
     <section class="Cabin-ofers">
         <div class="river-chalet-ofer">
-            <img src="img/river-chalet-ofer-img.jpg" alt="river chalet photo">
+            <img src="img/river-chalet-ofer.jpg" alt="river chalet photo">
             <article class="river-chalet-ofer-content">
                 <h3><span class="house-ofer-price">$65</span> /a night</h3>
                 <p>River Chalet</p>
@@ -10,6 +10,24 @@
                     <li>1 Bedroom</li>
                     <li>1 Bathroom</li>
                     <li>2 Sleeps</li>
+                </ul>
+                <div class="house-ofer-comfort">
+                    <p>Jetted Tub</p>
+                    <p>Flat Panel TV</p>
+                    <p>Fireplace</p>
+                    <p>Wi-Fi</p>
+                </div>
+            </article>
+        </div>
+        <div class="lookout-lodge-ofer">
+            <img src="img/lookout-lodge-ofer.jpg" alt="Lookout Lodge photo">
+            <article class="lookout-lodge-ofer-content">
+                <h3><span class="house-ofer-price">$75</span> /a night</h3>
+                <p>Lookout Lodge</p>
+                <ul class="house-ofer-rooms">
+                    <li>2 Bedrooms</li>
+                    <li>1 Bathroom</li>
+                    <li>4 Sleeps</li>
                 </ul>
                 <div class="house-ofer-comfort">
                     <p>Jetted Tub</p>
