copypasted and changed new ofers

--- a/partials/offer-main.html
+++ b/partials/offer-main.html
@@ -30,9 +30,45 @@
                     <li>4 Sleeps</li>
                 </ul>
                 <div class="house-ofer-comfort">
-                    <p>Jetted Tub</p>
-                    <p>Flat Panel TV</p>
+                    <p>Hot Tub</p>
+                    <p>Pool Table</p>
+                    <p>Jacuzzi Tub</p>
+                    <p>Wi-Fi</p>
+                </div>
+            </article>
+        </div>
+        <div class="smoky-view-chalet-ofer">
+            <img src="img/smoky-view-chalet-ofer.jpg" alt="Smoky View Chalet photo">
+            <article class="smoky-view-chalet-ofer-content">
+                <h3><span class="house-ofer-price">$75</span> /a night</h3>
+                <p>Lookout Lodge</p>
+                <ul class="house-ofer-rooms">
+                    <li>2 Bedrooms</li>
+                    <li>2 Bathroom</li>
+                    <li>6 Sleeps</li>
+                </ul>
+                <div class="house-ofer-comfort">
+                    <p>Whirlpool Tub</p>
+                    <p>Air Hockey</p>
                     <p>Fireplace</p>
+                    <p>Wi-Fi</p>
+                </div>
+            </article>
+        </div>
+        <div class="mountain-haven-ofer">
+            <img src="img/mountain-haven-ofer.jpg" alt="Mountain Haven photo">
+            <article class="mountain-haven-ofer-content">
+                <h3><span class="house-ofer-price">$100</span> /a night</h3>
+                <p>Lookout Lodge</p>
+                <ul class="house-ofer-rooms">
+                    <li>3 Bedrooms</li>
+                    <li>2 Bathroom</li>
+                    <li>8 Sleeps</li>
+                </ul>
+                <div class="house-ofer-comfort">
+                    <p>Whirlpool Tub</p>
+                    <p>Fireplace</p>
+                    <p>Grill</p>
                     <p>Wi-Fi</p>
                 </div>
             </article>
