finished almost all HTML code except RESERVE CABIN

--- a/partials/offer-main.html
+++ b/partials/offer-main.html
@@ -73,6 +73,24 @@
                 </div>
             </article>
         </div>
+        <div class="mountain-splash-ofer">
+            <img src="img/mountain-splash-ofer.jpg" alt="Mountain Splash photo">
+            <article class="mountain-splash-ofer-content">
+                <h3><span class="house-ofer-price">$100</span> /a night</h3>
+                <p>Lookout Lodge</p>
+                <ul class="house-ofer-rooms">
+                    <li>3 Bedrooms</li>
+                    <li>3 Bathroom</li>
+                    <li>10 Sleeps</li>
+                </ul>
+                <div class="house-ofer-comfort">
+                    <p>Private Indoor Pool</p>
+                    <p>Pool Table</p>
+                    <p>Hot Tub</p>
+                    <p>Air Hockey</p>
+                </div>
+            </article>
+        </div>
     </section>
     <div class="reservation">
         <h2 class="reservation-title">Make a reservation</h2>
