finished all html code

--- a/partials/offer-main.html
+++ b/partials/offer-main.html
@@ -17,6 +17,9 @@
                     <p>Fireplace</p>
                     <p>Wi-Fi</p>
                 </div>
+                <a href="#reservation-form">
+                    RESERVE CABIN
+                </a>
             </article>
         </div>
         <div class="lookout-lodge-ofer">
@@ -35,6 +38,9 @@
                     <p>Jacuzzi Tub</p>
                     <p>Wi-Fi</p>
                 </div>
+                <a href="#reservation-form">
+                    RESERVE CABIN
+                </a>
             </article>
         </div>
         <div class="smoky-view-chalet-ofer">
@@ -53,6 +59,9 @@
                     <p>Fireplace</p>
                     <p>Wi-Fi</p>
                 </div>
+                <a href="#reservation-form">
+                    RESERVE CABIN
+                </a>
             </article>
         </div>
         <div class="mountain-haven-ofer">
@@ -71,6 +80,9 @@
                     <p>Grill</p>
                     <p>Wi-Fi</p>
                 </div>
+                <a href="#reservation-form">
+                    RESERVE CABIN
+                </a>
             </article>
         </div>
         <div class="mountain-splash-ofer">
@@ -89,13 +101,16 @@
                     <p>Hot Tub</p>
                     <p>Air Hockey</p>
                 </div>
+                <a href="#reservation-form">
+                    RESERVE CABIN
+                </a>
             </article>
         </div>
     </section>
     <div class="reservation">
         <h2 class="reservation-title">Make a reservation</h2>
         <p class="reservation-description">Please complete the form below</p>
-        <form action="" method="" class="reservation-form">
+        <form action="" method="" class="reservation-form" id="reservation-form">
             <input type="text" placeholder="Name" class="reservation-input">
             <input type="text" placeholder="Phone number" class="reservation-input">
             <input type="text" placeholder="Check in date" class="reservation-input">
