--- a/partials/policies.rental-policisies.partial.html
+++ b/partials/policies.rental-policisies.partial.html
@@ -13,4 +13,5 @@
         <p>Mountain Time Cabin Rentals</p>
         <a href="#">+1 (234) 567 89 02</a>
     </div>
+    <!-- commit -->
 </section>
