--- a/css/offer.css
+++ b/css/offer.css
@@ -5,7 +5,7 @@
 /* @import url(name.css); */
 
 /* main */
-/* @import url(name.css); */
+@import url(offer-main.css);
 
 /*footer */
 /* @import url(name.css); */
