changed name acording to the standarts

--- a/css/offer.css
+++ b/css/offer.css
@@ -5,7 +5,7 @@
 /* @import url(name.css); */
 
 /* main */
-@import url(offer-main-stasiuk.css);
+@import url(offer-main-cabin-rentals.css);
 
 /*footer */
 /* @import url(name.css); */
