fixed img src in about.season-activities.partial.html

--- a/partials/about.season-activities.partial.html
+++ b/partials/about.season-activities.partial.html
@@ -1,7 +1,7 @@
 <section class="season-activities">
     <h2 class="season-activities__title">Season Activities</h2>
     <div class="season-activities__cards cards-up">
-        <img class="cards-up__image-winter" src="../img/nature-winter.jpg" alt="there is a nature in winter">
+        <img class="cards-up__image-winter" src="img/nature-winter.jpg" alt="there is a nature in winter">
         <div class="cards-up__winter-vacation">
             <h3 class="cards-up__winter-vacation-title">Winter Vacation in Yosemite National Park</h3>
             <p class="cards-up__winter-vacation-subtitle">Visit our park in winter and celebrate Christmas and New
@@ -112,6 +112,6 @@
                 </li>
             </ul>
         </div>
-        <img class="cards-low__image-summer" src="../img/nature-summer.jpg" alt="there is a nature in summerg">
+        <img class="cards-low__image-summer" src="img/nature-summer.jpg" alt="there is a nature in summerg">
     </div>
 </section>
