--- a/css/global.css
+++ b/css/global.css
@@ -1,43 +1,44 @@
  /* global*/
-@import url('https://fonts.googleapis.com/css2?family=Fredoka:wght@400;700&display=swap');
+ @import url("https://fonts.googleapis.com/css?family=Montserrat:400,700&display=swap");
 
-* {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-}
+ * {
+     box-sizing: border-box;
+     margin: 0;
+     padding: 0;
+ }
 
-:root {
-    --title-color: red;
-    --border-color:  #f2ff00d9;
-    --title-background-color: aqua;
-    --title-font-family: 'Fredoka', sans-serif;
-    scroll-behavior: smooth;
-    font-family: 'Fredoka', sans-serif;;
-}
+ :root {
+     --text-color: #333333;
+     --icons-color: #599673;
+     --title-color: #f98250;
+     --background-color: #ffffff;
+     --fields-border-color: #d0d0d0;
+     --fields-background-color: #f5f5f5;
+     --title-font-family: 'Fredoka', sans-serif;
+     scroll-behavior: smooth;
+     font-family: 'Montserrat', sans-serif;
 
-img {
-    display: block;
-    width: 100%;
-}
+ }
 
-a {
-    text-decoration: none;
-}
+ img {
+     display: block;
+     width: 100%;
+ }
 
-h1,
-h2 {
-    color: var(--title-color);
-    font-family: var(--title-font-family);
-    font-weight: normal;
-}
+ a {
+     text-decoration: none;
+ }
 
-p {
-    max-width: 644px;
-}
-/*
-p::first-letter {
-    font-size: 3rem;
-}
+ h1 {
+     font-family: var(--title-font-family);
+     font-weight: normal;
+ }
 
-*/
+ h2 {
+     font-family: var(--title-font-family);
+     font-weight: normal;
+ }
+
+ p {
+     max-width: 644px;
+ }
