--- a/css/global.css
+++ b/css/global.css
@@ -8,12 +8,19 @@
  }
 
  :root {
+     /*black */
      --text-color: #333333;
+     /*cyan tone*/
      --icons-color: #599673;
+     /*orange tone */
      --title-color: #f98250;
+     /* white*/
      --background-color: #ffffff;
+     /*gray*/
      --fields-border-color: #d0d0d0;
+     /*light gray*/
      --fields-background-color: #f5f5f5;
+
      --title-font-family: 'Fredoka', sans-serif;
      scroll-behavior: smooth;
      font-family: 'Montserrat', sans-serif;
