--- a/partials/about.season-activities.partial.html
+++ b/partials/about.season-activities.partial.html
@@ -9,31 +9,31 @@
                 adventures and winter activities we have to offer.</p>
             <ul class="cards-up__winter-vacation-list list">
                 <li class="list__item">
-                    <svg class="list__item-icon" viewBox="0 0 510 510" style="max-width:20px" height="20px">
+                    <svg class="list__item-icon" viewBox="0 0 510 510">
                         <path d="M255 0C114.75 0 0 114.75 0 255s114.75 255 255 255 255-114.75 255-255S395.25 0 255 0zm-51 382.5L76.5 255l35.7-35.7 91.8 91.8 193.8-193.8 35.7 35.7L204 382.5z" style fill="currentColor"></path>
                     </svg>
                     <p class="list__item-point">Snowmobile riding</p>
                 </li>
                 <li class="list__item">
-                    <svg class="list__item-icon" viewBox="0 0 510 510" style="max-width:20px" height="20px">
+                    <svg class="list__item-icon" viewBox="0 0 510 510">
                         <path d="M255 0C114.75 0 0 114.75 0 255s114.75 255 255 255 255-114.75 255-255S395.25 0 255 0zm-51 382.5L76.5 255l35.7-35.7 91.8 91.8 193.8-193.8 35.7 35.7L204 382.5z" style fill="currentColor"></path>
                     </svg>
                     <p class="list__item-point">Snowboarding</p>                   
                 </li>
                 <li class="list__item">
-                    <svg class="list__item-icon" viewBox="0 0 510 510" style="max-width:20px" height="20px">
+                    <svg class="list__item-icon" viewBox="0 0 510 510">
                         <path d="M255 0C114.75 0 0 114.75 0 255s114.75 255 255 255 255-114.75 255-255S395.25 0 255 0zm-51 382.5L76.5 255l35.7-35.7 91.8 91.8 193.8-193.8 35.7 35.7L204 382.5z" style fill="currentColor"></path>
                     </svg>
                     <p class="list__item-point">Snow-shoeing</p>
                 </li>
                 <li class="list__item">
-                    <svg class="list__item-icon" viewBox="0 0 510 510" style="max-width:20px" height="20px">
+                    <svg class="list__item-icon" viewBox="0 0 510 510">
                         <path d="M255 0C114.75 0 0 114.75 0 255s114.75 255 255 255 255-114.75 255-255S395.25 0 255 0zm-51 382.5L76.5 255l35.7-35.7 91.8 91.8 193.8-193.8 35.7 35.7L204 382.5z" style fill="currentColor"></path>
                     </svg>
                     <p class="list__item-point">Skating</p>
                 </li>
                 <li class="list__item">
-                    <svg class="list__item-icon" viewBox="0 0 510 510" style="max-width:20px" height="20px">
+                    <svg class="list__item-icon" viewBox="0 0 510 510">
                         <path d="M255 0C114.75 0 0 114.75 0 255s114.75 255 255 255 255-114.75 255-255S395.25 0 255 0zm-51 382.5L76.5 255l35.7-35.7 91.8 91.8 193.8-193.8 35.7 35.7L204 382.5z" style fill="currentColor"></path>
                     </svg>
                     <p class="list__item-point">Skiing</p>
@@ -48,64 +48,64 @@
                 of activities for you to choose from. Visit us in summer and enjoy your vacation!</p>
             <ul class="cards-low__summer-vacation-list list">
                 <li class="list__item">                  
-                    <svg class="list__item-icon" viewBox="0 0 510 510" style="max-width:20px" height="20px">
+                    <svg class="list__item-icon" viewBox="0 0 510 510">
                         <path d="M255 0C114.75 0 0 114.75 0 255s114.75 255 255 255 255-114.75 255-255S395.25 0 255 0zm-51 382.5L76.5 255l35.7-35.7 91.8 91.8 193.8-193.8 35.7 35.7L204 382.5z" style fill="currentColor"></path>
                     </svg>
                     <p class="list__item-point">Horseback riding</p>
                 </li>
                 <li class="list__item">                   
-                    <svg class="list__item-icon" viewBox="0 0 510 510" style="max-width:20px" height="20px">
+                    <svg class="list__item-icon" viewBox="0 0 510 510">
                         <path d="M255 0C114.75 0 0 114.75 0 255s114.75 255 255 255 255-114.75 255-255S395.25 0 255 0zm-51 382.5L76.5 255l35.7-35.7 91.8 91.8 193.8-193.8 35.7 35.7L204 382.5z" style fill="currentColor"></path>
                     </svg>
                     <p class="list__item-point">Rock climbing</p>
                 </li>
                 <li class="list__item">                   
-                    <svg class="list__item-icon" viewBox="0 0 510 510" style="max-width:20px" height="20px">
+                    <svg class="list__item-icon" viewBox="0 0 510 510">
                         <path d="M255 0C114.75 0 0 114.75 0 255s114.75 255 255 255 255-114.75 255-255S395.25 0 255 0zm-51 382.5L76.5 255l35.7-35.7 91.8 91.8 193.8-193.8 35.7 35.7L204 382.5z" style fill="currentColor"></path>
                     </svg>
                     <p class="list__item-point">Biking</p>
                 </li>
                 <li class="list__item">               
-                    <svg class="list__item-icon" viewBox="0 0 510 510" style="max-width:20px" height="20px">
+                    <svg class="list__item-icon" viewBox="0 0 510 510">
                         <path d="M255 0C114.75 0 0 114.75 0 255s114.75 255 255 255 255-114.75 255-255S395.25 0 255 0zm-51 382.5L76.5 255l35.7-35.7 91.8 91.8 193.8-193.8 35.7 35.7L204 382.5z" style fill="currentColor"></path>
                     </svg>
                     <p class="list__item-point">Cycling</p>
                 </li>
                 <li class="list__item">
-                    <svg class="list__item-icon" viewBox="0 0 510 510" style="max-width:20px" height="20px">
+                    <svg class="list__item-icon" viewBox="0 0 510 510">
                         <path d="M255 0C114.75 0 0 114.75 0 255s114.75 255 255 255 255-114.75 255-255S395.25 0 255 0zm-51 382.5L76.5 255l35.7-35.7 91.8 91.8 193.8-193.8 35.7 35.7L204 382.5z" style fill="currentColor"></path>
                     </svg>
                     <p class="list__item-point">Fishing</p>
                 </li>
                 <li class="list__item">
-                    <svg class="list__item-icon" viewBox="0 0 510 510" style="max-width:20px" height="20px">
+                    <svg class="list__item-icon" viewBox="0 0 510 510">
                         <path
                             d="M255 0C114.75 0 0 114.75 0 255s114.75 255 255 255 255-114.75 255-255S395.25 0 255 0zm-51 382.5L76.5 255l35.7-35.7 91.8 91.8 193.8-193.8 35.7 35.7L204 382.5z" style fill="currentColor"></path>
                     </svg>
                     <p class="list__item-point">Hiking</p>
                 </li>
                 <li class="list__item">
-                    <svg class="list__item-icon" viewBox="0 0 510 510" style="max-width:20px" height="20px">
+                    <svg class="list__item-icon" viewBox="0 0 510 510">
                         <path
                             d="M255 0C114.75 0 0 114.75 0 255s114.75 255 255 255 255-114.75 255-255S395.25 0 255 0zm-51 382.5L76.5 255l35.7-35.7 91.8 91.8 193.8-193.8 35.7 35.7L204 382.5z" style fill="currentColor"></path>
                     </svg>
                     <p class="list__item-point">Rafting</p>
                 </li>
                 <li class="list__item">
-                    <svg class="list__item-icon" viewBox="0 0 510 510" style="max-width:20px" height="20px">
+                    <svg class="list__item-icon" viewBox="0 0 510 510">
                         <path d="M255 0C114.75 0 0 114.75 0 255s114.75 255 255 255 255-114.75 255-255S395.25 0 255 0zm-51 382.5L76.5 255l35.7-35.7 91.8 91.8 193.8-193.8 35.7 35.7L204 382.5z"
                             style fill="currentColor"></path>
                     </svg>
                     <p class="list__item-point">Golf</p>
                 </li>
                 </li class="list__item">                  
-                    <svg class="list__item-icon" viewBox="0 0 510 510" style="max-width:20px" height="20px">
+                    <svg class="list__item-icon" viewBox="0 0 510 510">
                         <path d="M255 0C114.75 0 0 114.75 0 255s114.75 255 255 255 255-114.75 255-255S395.25 0 255 0zm-51 382.5L76.5 255l35.7-35.7 91.8 91.8 193.8-193.8 35.7 35.7L204 382.5z" style fill="currentColor"></path>
                     </svg>
                     <p class="list__item-point">Camping</p>
                 </li>
                 <li  class="list__item">  
-                    <svg class="list__item-icon" viewBox="0 0 510 510" style="max-width:20px" height="20px">
+                    <svg class="list__item-icon" viewBox="0 0 510 510">
                         <path d="M255 0C114.75 0 0 114.75 0 255s114.75 255 255 255 255-114.75 255-255S395.25 0 255 0zm-51 382.5L76.5 255l35.7-35.7 91.8 91.8 193.8-193.8 35.7 35.7L204 382.5z" style fill="currentColor"></path>
                     </svg>
                     <p class="list__item-point">Guided tours</p>
