modified: partials/index.answer-for-question.partial.html

--- a/partials/index.answer-for-question.partial.html
+++ b/partials/index.answer-for-question.partial.html
@@ -1,1 +1,7 @@
-<section></section>
+<section class="answer-for-question">
+    <h2 class="answer-for-question__title">Get full answer for your question</h2>
+    <div class="answer-for-question__buttons">
+        <button>CALL US</button>
+        <a href="#">RESERVATION</a>
+    </div>
+</section>
