--- a/css/global.css
+++ b/css/global.css
@@ -18,6 +18,8 @@
      --background-color: #ffffff;
      /*gray*/
      --fields-border-color: #d0d0d0;
+     /*dark grey*/
+     --description-color: #848484;
      /*light gray*/
      --fields-background-color: #f5f5f5;
 
