Added class selectors

--- a/css/global.css
+++ b/css/global.css
@@ -15,7 +15,7 @@
      /*orange tone */
      --title-color: #f98250;
      /* white*/
-     --background-color: #ffffff;
+     r--background-colo: #ffffff;
      /*gray*/
      --fields-border-color: #d0d0d0;
      /*dark grey*/
