--- a/css/index.things-to-do.css
+++ b/css/index.things-to-do.css
@@ -1,6 +1,43 @@
-.cards__subheading {
-    color: var(--title-color);
+.things-to-do__title {
+    color: var(--text-color);    
+    /*font-family: "Circular Std", serif;*/
+    font-size: 39px;
+    font-weight: 500;
+    text-align: center;
 }
+
+.cards__heading {
+    color: var(--text-color);    
+    /*font-family: "Circular Std", serif;*/
+    font-size: 23px;
+    font-weight: 500;
+    text-align: center;
+}
+
+.cards__subheading {
+    box-sizing: border-box;
+    color: var(--title-color);
+    /*font-family: "Circular Std", serif;*/    
+    font-size: 20px;
+    font-weight: 500;
+    text-align: center;
+}
+
 .cards__description {
     color: var(--description-color);
+    /*font-family Roboto, sans-serif;*/
+    font-size: 16px;
+    font-weight: 400;    
+    text-align: center;
+}
+
+.cards__image {
+    border-radius: 10px;
+    border-color: rgb(40, 37, 32);
+}
+
+.cards__item {
+    background-color: var(--background-color);
+    border-color: rgb(40, 37, 32);
+    padding: 10px;
 }
