--- a/css/global.css
+++ b/css/global.css
@@ -1,6 +1,5 @@
  /* global*/
  @import url("https://fonts.googleapis.com/css?family=Montserrat:400,700&display=swap");
- @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 
  * {
      box-sizing: border-box;
@@ -16,7 +15,7 @@
      /*orange tone */
      --title-color: #f98250;
      /* white*/
-     r--background-colo: #ffffff;
+     --background-color: #ffffff;
      /*gray*/
      --fields-border-color: #d0d0d0;
      /*dark grey*/
@@ -24,8 +23,7 @@
      /*light gray*/
      --fields-background-color: #f5f5f5;
 
-     --title-font-family: 'Montserrat', sans-serif;
-     --text-font-family: 'Roboto', sans-serif;
+     --title-font-family: 'Fredoka', sans-serif;
      scroll-behavior: smooth;
      font-family: 'Montserrat', sans-serif;
 
