--- a/css/global.css
+++ b/css/global.css
@@ -1,5 +1,6 @@
  /* global*/
  @import url("https://fonts.googleapis.com/css?family=Montserrat:400,700&display=swap");
+ @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 
  * {
      box-sizing: border-box;
@@ -24,6 +25,7 @@
      --fields-background-color: #f5f5f5;
 
      --title-font-family: 'Fredoka', sans-serif;
+     --description-font-family: 'Roboto', sans-serif;
      scroll-behavior: smooth;
      font-family: 'Montserrat', sans-serif;
 
