--- a/css/index.things-to-do.css
+++ b/css/index.things-to-do.css
@@ -1,5 +1,5 @@
 .things-to-do__title {
-    color: var(--text-color);    
+    color: var(--text-color);
     /*font-family: "Circular Std", serif;*/
     font-size: 39px;
     font-weight: 500;
@@ -7,7 +7,7 @@
 }
 
 .cards__heading {
-    color: var(--text-color);    
+    color: var(--text-color);
     /*font-family: "Circular Std", serif;*/
     font-size: 23px;
     font-weight: 500;
@@ -17,7 +17,7 @@
 .cards__subheading {
     box-sizing: border-box;
     color: var(--title-color);
-    /*font-family: "Circular Std", serif;*/    
+    /*font-family: "Circular Std", serif;*/
     font-size: 20px;
     font-weight: 500;
     text-align: center;
@@ -25,9 +25,9 @@
 
 .cards__description {
     color: var(--description-color);
-    /*font-family Roboto, sans-serif;*/
+    font-family: var(--description-font-family);
     font-size: 16px;
-    font-weight: 400;    
+    font-weight: 400;
     text-align: center;
 }
 
