--- a/partials/gallery-main-seasons.partial.html
+++ b/partials/gallery-main-seasons.partial.html
@@ -1,4 +1,5 @@
 <script>
+  <div>
         <h1>Gallery</h1>
     </div>
     <div>
@@ -87,4 +88,19 @@
                     <img width="300" src="img/spa-terrace.jpg" alt="House in the forest">
                 </div>
             </div>
+        </div>
+
+        <script>
+            function toggleBlock(blockId) {
+                var blocks = document.getElementsByClassName('block');
+                for (var i = 0; i < blocks.length; i++) {
+                    if (blocks[i].id === blockId) {
+                        blocks[i].style.display = 'block';
+                    } else {
+                        blocks[i].style.display = 'none';
+                    }
+                }
+            }
+        </script>
+    </div>
         </script>
