added some styles

--- a/css/index.css
+++ b/css/index.css
@@ -2,10 +2,11 @@
 @import url(global.css);
 
 /* header */
-/* @import url(name.css); */
+ @import url(header.css); 
 
 /* main */
 /* @import url(name.css); */
+@import url(call-form.css);
 
 /*footer */
 /* @import url(name.css); */
