--- a/partials/header.partial.html
+++ b/partials/header.partial.html
@@ -1,7 +1,13 @@
 <header class="header">
-  <p class="header__location">Yosemite Mariposa County, Ca, USA</p>
-  <a href="index.html" class="header__logo"><img src="img/yosemite-vacation-logo.png"
-      alt="Yosemite vacation logo" /></a>
+  <div class="header__info">
+    <p class="header__location">Yosemite <br> Mariposa <br> County, Ca, USA</p>
+    <a href="index.html" class="header__logo"><img src="img/yosemite-vacation-logo.png"
+        alt="Yosemite vacation logo" /></a>
+    <div class="header__contact">
+      <a href="tel:+1(234)5678900" class="header__contact-link">+1 (234) 567 89 00</a>
+      <a href="tel:+1(234)5678901" class="header__contact-link">+1 (234) 567 89 01</a>
+    </div>
+  </div>
   <ul class="header__menu">
     <li class="header__menu-item">
       <a href="about.html" class="header__menu-link">About</a>
@@ -16,8 +22,4 @@
       <a href="contact.html" class="header__menu-link">How to get there</a>
     </li>
   </ul>
-  <div class="header__contact">
-    <a href="tel:+1(234)5678900" class="header__contact-link">+1 (234) 567 89 00</a>
-    <a href="tel:+1(234)5678901" class="header__contact-link">+1 (234) 567 89 01</a>
-  </div>
 </header>
