Removed class=cards__item in </article>

--- a/partials/index.things-to-do.partial.html
+++ b/partials/index.things-to-do.partial.html
@@ -27,7 +27,7 @@
             <h4 class="cards__subheading">$1/hour</h4>
             <p class="cards__description">Rent a bike and take a fun and easy two-wheel tour over Yosemite Valley. It
                 usually takes 2 hours.</p>
-        </article class="cards__item">
+        </article>
         <article class="cards__item">
             <div class="cards__item-image-container">
                 <img class="cards__image" width="313" src="img/rafting.jpeg" alt="Rafting">
