--- a/partials/gallery-main-seasons.partial.html
+++ b/partials/gallery-main-seasons.partial.html
@@ -1,4 +1,4 @@
-<script>
+<section>
   <div>
         <h1>Gallery</h1>
     </div>
@@ -103,4 +103,4 @@
             }
         </script>
     </div>
-        </script>
+  </section>
