Added image width

--- a/partials/index.things-to-do.partial.html
+++ b/partials/index.things-to-do.partial.html
@@ -12,7 +12,7 @@
         </article>
         <article class="cards__item">
             <div class="cards__item-image-container">
-                <img class="cards__image" width="313" src="img/rock-climbing.jpeg" alt="Rock climbing">
+                <img class="cards__image" src="img/rock-climbing.jpeg" alt="Rock climbing">
             </div>
             <h3 class="cards__heading">Rock Climbing</h3>
             <h4 class="cards__subheading">$2/hour</h4>
