--- a/css/index.things-to-do.css
+++ b/css/index.things-to-do.css
@@ -1,6 +1,6 @@
 .things-to-do__title {
     color: var(--text-color);
-    /*font-family: "Circular Std", serif;*/   
+    /*font-family: "Circular Std", serif;*/
     font-size: 39px;
     font-weight: 500;
     text-align: center;
@@ -8,7 +8,7 @@
 
 .cards__heading {
     color: var(--text-color);
-    /*font-family: "Circular Std", serif;*/    
+    /*font-family: "Circular Std", serif;*/
     font-size: 23px;
     font-weight: 500;
     text-align: center;
@@ -16,7 +16,7 @@
 
 .cards__subheading {
     box-sizing: border-box;
-    color: var(--title-color);    
+    color: var(--title-color);
     /*font-family: "Circular Std", serif;*/
     font-size: 20px;
     font-weight: 500;
@@ -24,7 +24,7 @@
 }
 
 .cards__description {
-    color: var(--description-color);    
+    color: var(--description-color);
     font-family: var(--description-font-family);
     font-size: 16px;
     font-weight: 400;
@@ -35,10 +35,11 @@
     background-color: var(--background-color);
     border-color: rgb(40, 37, 32);
     display: block;
-    padding: 10px;
 }
 
 .cards__image {
     border-radius: 10px;
-    border-color: rgb(40, 37, 32);    
+    border-color: rgb(40, 37, 32);
+    margin: 20px;
+    width: 313px;
 }
