--- a/partials/cabin-rental.partial.html
+++ b/partials/cabin-rental.partial.html
@@ -1,36 +1,35 @@
-<section>
-    <h2>Cabin Rentals</h2>
-    <ul>
-        <li>
-            <img src="img/river-chalet-house.webp" alt="river chalet house" height="250">
-            <p>$65/night</p>
-            <h3>River Chalet</h3>
-            <p>1 Bedroom, 1 Bathroom, Sleeps 2</p>
-            <a href="offer.html">LEARN MORE</a>
+<section class="cabin-rentals">
+    <h2 class="cabin-rentals__title">Cabin Rentals</h2>
+    <ul class="cabin-rentals__list">
+        <li class="cabin-rentals__item">
+            <img class="cabin-rentals__item-image" src="img/river-chalet-house.webp" alt="river chalet house" height="250">
+            <p class="cabin-rentals__item-price">$65/night</p>
+            <h3 class="cabin-rentals__item-name">River Chalet</h3>
+            <p class="cabin-rentals__item-details">1 Bedroom, 1 Bathroom, Sleeps 2</p>
+            <a class="cabin-rentals__item-link" href="offer.html">LEARN MORE</a>
         </li>
-        <li>
-            <img src="img/lookout-lodge-house.webp" alt="lookout lodge house" height="250">
-            <p>$75/night</p>
-            <h3>Lookout Lodge</h3>
-            <p>2 Bedroom, 1 Bathroom, Sleeps 4</p>
-            <a href="offer.html">LEARN MORE</a>
+        <li class="cabin-rentals__item">
+            <img class="cabin-rentals__item-image" src="img/lookout-lodge-house.webp" alt="lookout lodge house" height="250">
+            <p class="cabin-rentals__item-price">$75/night</p>
+            <h3 class="cabin-rentals__item-name">Lookout Lodge</h3>
+            <p class="cabin-rentals__item-details">2 Bedroom, 1 Bathroom, Sleeps 4</p>
+            <a class="cabin-rentals__item-link" href="offer.html">LEARN MORE</a>
         </li>
-        <li>
-            <img src="img/smoky-view-chalet-house.webp" alt="smoky view chalet house" height="250">
-            <p>$85/night</p>
-            <h3>Smoky View Chalet</h3>
-            <p>2 Bedroom, 2 Bathroom, Sleeps 6</p>
-            <a href="offer.html">LEARN MORE</a>
+        <li class="cabin-rentals__item">
+            <img class="cabin-rentals__item-image" src="img/smoky-view-chalet-house.webp" alt="smoky view chalet house" height="250">
+            <p class="cabin-rentals__item-price">$85/night</p>
+            <h3 class="cabin-rentals__item-name">Smoky View Chalet</h3>
+            <p class="cabin-rentals__item-details">2 Bedroom, 2 Bathroom, Sleeps 6</p>
+            <a class="cabin-rentals__item-link" href="offer.html">LEARN MORE</a>
         </li>
-        <li>
-            <img src="img/mountain-haven-house.webp" alt="mountain haven house" height="250">
-            <p>$95/night</p>
-            <h3>Mountain Haven</h3>
-            <p>3 Bedroom, 2 Bathroom, Sleeps 8</p>
-            <a href="offer.html">LEARN MORE</a>
+        <li class="cabin-rentals__item">
+            <img class="cabin-rentals__item-image" src="img/mountain-haven-house.webp" alt="mountain haven house" height="250">
+            <p class="cabin-rentals__item-price">$95/night</p>
+            <h3 class="cabin-rentals__item-name">Mountain Haven</h3>
+            <p class="cabin-rentals__item-details">3 Bedroom, 2 Bathroom, Sleeps 8</p>
+            <a class="cabin-rentals__item-link" href="offer.html">LEARN MORE</a>
         </li>
     </ul>
 
-    <a href="offer.html">SEE ALL CABINS</a>
-
+    <a class="cabin-rentals__all-link" href="offer.html">SEE ALL CABINS</a>
 </section>
