Removed image width

--- a/partials/index.things-to-do.partial.html
+++ b/partials/index.things-to-do.partial.html
@@ -3,7 +3,7 @@
     <div class="things-to-do__cards cards">
         <article class="cards__item">
             <div class="cards__item-image-container">
-                <img class="cards__image" width="313" src="img/girl-on-horse.jpeg" alt="Girl on horse">
+                <img class="cards__image" src="img/girl-on-horse.jpeg" alt="Girl on horse">
             </div>
             <h3 class="cards__heading">Horse Riding</h3>
             <h4 class="cards__subheading">$4/hour</h4>
@@ -21,7 +21,7 @@
         </article>
         <article class="cards__item">
             <div class="cards__item-image-container">
-                <img class="cards__image" width="313" src="img/biking.jpeg" alt="Biking">
+                <img class="cards__image" src="img/biking.jpeg" alt="Biking">
             </div>
             <h3 class="cards__heading">Horse Riding</h3>
             <h4 class="cards__subheading">$1/hour</h4>
@@ -30,7 +30,7 @@
         </article>
         <article class="cards__item">
             <div class="cards__item-image-container">
-                <img class="cards__image" width="313" src="img/rafting.jpeg" alt="Rafting">
+                <img class="cards__image" src="img/rafting.jpeg" alt="Rafting">
             </div>
             <h3 class="cards__heading">Horse Riding</h3>
             <h4 class="cards__subheading">$3/hour</h4>
@@ -39,7 +39,7 @@
         </article>
         <article class="cards__item">
             <div class="cards__item-image-container">
-                <img class="cards__image" width="313" src="img/fishing.jpeg" alt="Fishing">
+                <img class="cards__image" src="img/fishing.jpeg" alt="Fishing">
             </div>
             <h3 class="cards__heading">Fishing</h3>
             <h4 class="cards__subheading">$2/hour</h4>
@@ -48,7 +48,7 @@
         </article>
         <article class="cards__item">
             <div class="cards__item-image-container">
-                <img class="cards__image" width="313" src="img/wellness.jpeg" alt="Spas and Wellness">
+                <img class="cards__image" src="img/wellness.jpeg" alt="Spas and Wellness">
             </div>
             <h3 class="cards__heading">Fishing</h3>
             <h4 class="cards__subheading">$2/hour</h4>
