--- a/css/policies.css
+++ b/css/policies.css
@@ -2,7 +2,7 @@
 @import url(global.css);
 
 /* header */
-/* @import url(name.css); */
+@import url(header.css);
 
 /* main */
 /* @import url(name.css); */
