--- a/partials/index.things-to-do.partial.html
+++ b/partials/index.things-to-do.partial.html
@@ -43,7 +43,7 @@
             </div>
             <h3 class="cards__heading">Fishing</h3>
             <h4 class="cards__subheading">$2/hour</h4>
-            <p class="cards__description">TWith a number of permanent streams and mountain lakes, we offer anglers of
+            <p class="cards__description">With a number of permanent streams and mountain lakes, we offer anglers of
                 all levels a diverse variety of opportunities for fishing.</p>
         </article>
         <article class="cards__item">
