added some styles to call-form

--- a/partials/call-form.partial.html
+++ b/partials/call-form.partial.html
@@ -1,9 +1,11 @@
 <section class="call-order">
-    <h2 class="call-order__title">Yosemite Vacation Cabin Rental</h2>
-    <p class="call-order__description">Plan your next vacation and enjoy the nature around you!</p>
-    <form class="call-order__form" action="#" method="post">
-        <input class="call-order__input" type="text" name="contact-name" placeholder="Name*" required />
-        <input class="call-order__input" type="tel" name="phone-number" placeholder="Phone number*" required />
-        <input class="call-order__btn" type="submit" value="Order a call" />
-    </form>
+    <div class="call-order__wrapper">
+        <h1 class="call-order__title">Yosemite Vacation Cabin Rental</h1>
+        <p class="call-order__description">Plan your next vacation and enjoy the nature around you!</p>
+        <form class="call-order__form" action="#" method="post">
+            <input class="call-order__input" type="text" name="contact-name" placeholder="Name*" required />
+            <input class="call-order__input" type="tel" name="phone-number" placeholder="Phone number*" required />
+            <input class="call-order__input call-order__btn" type="submit" value="Order a call" />
+        </form>
+    </div>
 </section>
