--- a/css/index.css
+++ b/css/index.css
@@ -8,5 +8,7 @@
 /* @import url(name.css); */
 @import url(call-form.css);
 @import url(index.things-to-do.css);
+@import url(index.adventure.css);
+@import url(index.answer-for-question.css);
 /*footer */
 /* @import url(name.css); */
