--- a/partials/index-form.html
+++ b/partials/index-form.html
@@ -1,19 +1,22 @@
-<div class="reservation">
-    <h2 class="reservation-title">Make a reservation</h2>
-    <p class="reservation-description">Please complete the form below</p>
-    <form action="" method="" class="reservation-form">
-        <input type="text" placeholder="Name" class="reservation-input">
-        <input type="text" placeholder="Phone number" class="reservation-input">
-        <input type="text" placeholder="Check in date" class="reservation-input">
-        <input type="text" placeholder="Check out date" class="reservation-input">
-        <select name="Number of guests" aria-placeholder="Number of guests" class="reservation-select">
-            <option>1</option>
-            <option>2</option>
-            <option>3</option>
-            <option>4</option>
-            <option>5</option>
-            <option>5+</option>
-        </select>
-        <input type="submit" placeholder="Make a reservation" class="reservation-submit">
-    </form>
+<div class="reservation-container">
+    <section class="reservation">
+        <h2 class="reservation-title">Make a reservation</h2>
+        <p class="reservation-description">Please complete the form below</p>
+        <form action="" method="" class="reservation-form">
+            <input type="text" placeholder="Name" class="reservation-input">
+            <input type="text" placeholder="Phone number" class="reservation-input">
+            <input type="text" placeholder="Check in date" class="reservation-input">
+            <input type="text" placeholder="Check out date" class="reservation-input">
+            <select name="Number of guests" aria-placeholder="Number of guests" class="reservation-select">
+                <option>1</option>
+                <option>2</option>
+                <option>3</option>
+                <option>4</option>
+                <option>5</option>
+                <option>5+</option>
+            </select>
+            <input type="submit" placeholder="Make a reservation" class="reservation-submit">
+        </form>
+    </section>
+    
 </div>
