--- a/partials/offer-main.html
+++ b/partials/offer-main.html
@@ -107,22 +107,24 @@
             </article>
         </div>
     </section>
-    <div class="reservation">
-        <h2 class="reservation-title">Make a reservation</h2>
-        <p class="reservation-description">Please complete the form below</p>
-        <form action="" method="" class="reservation-form" id="reservation-form">
-            <input type="text" placeholder="Name" class="reservation-input">
-            <input type="text" placeholder="Phone number" class="reservation-input">
-            <input type="text" placeholder="Check in date" class="reservation-input">
-            <input type="text" placeholder="Check out date" class="reservation-input">
-            <select name="Number-of-guests" aria-placeholder="Number of guests" class="reservation-select">
-                <option>Cabin clasic</option>
-                <option>Cabin superior</option>
-                <option>Cabin superior+</option>
-                <option>American Eagle</option>
-                <option>The firehouse</option>
-            </select>
-            <input type="submit" placeholder="Make a reservation" class="reservation-submit">
-        </form>
+    <div class="reservation-container">
+        <section class="reservation">
+            <h2 class="reservation-title">Make a reservation</h2>
+            <p class="reservation-description">Please complete the form below</p>
+            <form action="" method="" class="reservation-form" id="reservation-form">
+                <input type="text" placeholder="Name" class="reservation-input">
+                <input type="text" placeholder="Phone number" class="reservation-input">
+                <input type="text" placeholder="Check in date" class="reservation-input">
+                <input type="text" placeholder="Check out date" class="reservation-input">
+                <select name="Number-of-guests" aria-placeholder="Number of guests" class="reservation-select">
+                    <option>Cabin clasic</option>
+                    <option>Cabin superior</option>
+                    <option>Cabin superior+</option>
+                    <option>American Eagle</option>
+                    <option>The firehouse</option>
+                </select>
+                <input type="submit" placeholder="Make a reservation" class="reservation-submit">
+            </form>
+        </section>
     </div>
 </main>
