--- a/css/index.css
+++ b/css/index.css
@@ -6,10 +6,10 @@
 
 /* main */
 /* @import url(name.css); */
-@import url(form.css)
 @import url(call-form.css);
 @import url(index.things-to-do.css);
 @import url(index.adventure.css);
 @import url(index.answer-for-question.css);
+@import url(form.css);
 /*footer */
 /* @import url(name.css); */
