added some styles to input

--- a/css/form.css
+++ b/css/form.css
@@ -1,7 +1,6 @@
 .reservation {
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
 }
 .reservation-container{
@@ -13,4 +12,19 @@
 .reservation-form{
     display: flex;
     flex-direction: column;
+}
+.reservation-input{
+        border-radius: 34px;
+        min-height: 48px;
+        margin-top: 12px;
+        margin-bottom: 12px;
+        padding: 16px 24px;
+}
+.reservation-submit{
+    background-color: var(--title-color);
+    margin-top: 56px;
+    min-height: 46px;
+}
+.reservation-submit:hover{
+    background-color: var(--icons-color);
 }
