--- a/partials/about.season-activities.partial.html
+++ b/partials/about.season-activities.partial.html
@@ -1,4 +1,4 @@
-<section class="season-activities">
+<section class="season-activities container">
     <h2 class="season-activities__title">Season Activities</h2>
     <div class="season-activities__cards cards-up">
         <img class="cards-up__image-winter" src="img/nature-winter.jpg" alt="there is a nature in winter">
@@ -7,7 +7,7 @@
             <p class="cards-up__winter-vacation-subtitle">Visit our park in winter and celebrate Christmas and New
                 Year holidays with us. You and all your family members will be impressed with a variety of breathtaking
                 adventures and winter activities we have to offer.</p>
-            <ul class="cards-up__winter-vacation-list list">
+                <ul class="cards-up__winter-vacation-list list">
                 <li class="list__item">
                     <svg class="list__item-icon" viewBox="0 0 510 510">
                         <path d="M255 0C114.75 0 0 114.75 0 255s114.75 255 255 255 255-114.75 255-255S395.25 0 255 0zm-51 382.5L76.5 255l35.7-35.7 91.8 91.8 193.8-193.8 35.7 35.7L204 382.5z" style fill="currentColor"></path>
@@ -32,7 +32,7 @@
                     </svg>
                     <p class="list__item-point">Skating</p>
                 </li>
-                <li class="list__item">
+                <li class="list__item list__item-last">
                     <svg class="list__item-icon" viewBox="0 0 510 510">
                         <path d="M255 0C114.75 0 0 114.75 0 255s114.75 255 255 255 255-114.75 255-255S395.25 0 255 0zm-51 382.5L76.5 255l35.7-35.7 91.8 91.8 193.8-193.8 35.7 35.7L204 382.5z" style fill="currentColor"></path>
                     </svg>
@@ -104,7 +104,7 @@
                     </svg>
                     <p class="list__item-point">Camping</p>
                 </li>
-                <li  class="list__item">  
+                <li  class="list__item list__item">  
                     <svg class="list__item-icon" viewBox="0 0 510 510">
                         <path d="M255 0C114.75 0 0 114.75 0 255s114.75 255 255 255 255-114.75 255-255S395.25 0 255 0zm-51 382.5L76.5 255l35.7-35.7 91.8 91.8 193.8-193.8 35.7 35.7L204 382.5z" style fill="currentColor"></path>
                     </svg>
