--- a/css/form.css
+++ b/css/form.css
@@ -4,7 +4,7 @@
     justify-content: center;
     background-color: var(--background-color);
     min-height: 466px;
-    padding: 20px;
+    padding: 30px;
     border-radius: 20px;
 }
 .reservation-container{
@@ -21,13 +21,15 @@
     flex-direction: column;
 }
 .reservation-input{
-    min-width: 500px;
-    min-height: 20px;
+    min-width: 350px;
+    height: 20px;
     border-radius: 40px;
     min-height: 48px;
     margin-top: 12px;
     margin-bottom: 12px;
     padding: 16px 24px;
+    background-color: var(--fields-border-color);
+    border: 0px;
 }
 .reservation-submit{
     background-color: var(--title-color);
